infrastructure/controllers/staging/cloudflare/external-svc-audiobookshelf.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  type: ExternalName
  externalName: audiobookshelf.audiobookshelf
