infrastructure/controllers/staging/cloudflare/external-svc-grafana.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: kube-prometheus-stack-grafana.monitoring
