infrastructure/controllers/staging/cloudflare/external-svc-linkding.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  type: ExternalName
  externalName: linkding.linkding
